SPRING DYNAMIC MODULES FRAMEWORK CHANGELOG
==========================================
http://www.springframework.org/osgi

Changes in version 1.1.0 (200y-mm-dd)
-----------------------------------------

General
* Knopflerfish 2.0.4+ required
* Felix 1.0.3+ required

Package org.springframework.osgi.io
* added support for classpath: and classpath*: patterns

Changes in version 1.0.1 (2008-0m-dd)
-------------------------------------

Package org.springframework.context.support
* the namespace resolver mechanism first checks the local bundle classpath before using the extender namespace service

Package org.springframework.osgi.io
* improved OsgiBundleResource handling of jars with missing archive entries for folders
* improved OsgiBundleResourcePatternResolver performance when checking for jar resources
* improved detection of relative OSGi URLs

Package org.springframework.osgi.test
* AbstractOsgiTest provides better error messages for bundle that fail to start
* custom artifact locators can be used with AbstractDependencyManagerTests
* removed all internal usage of system properties by the testing infrastructure
* removed the use of serialization inside the testing framework

Changes in version 1.0 final (2008-01-25)
-----------------------------------------

Package org.springframework.osgi.extensions.annotation
* aligned bundle symbolic name with the rest of the bundles

Package org.springframework.osgi.service
* refined the service proxy returned by OsgiServiceProxyFactoryBean so it doesn't allow usage after being destroyed

Package org.springframework.osgi.test
* removed deprecated mispelled Platforms#KNOPFLEFISH constant
* KnopflerfishPlatform exports automatically system packages for JDK 1.4/1.5
* refined test bundle creation to ignore duplicate META-INF/MANIFEST.MF
* optimized test bundle creation by using no compression
* AbstractOnTheFlyBundleCreatorTests automatic manifest generation does not add OSGi import entries for packages